--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,7 @@ authors = ["Lynn <lynn@foldr.moe>"]
 
 [dependencies]
 rand = "0.3.15"
-pancurses = "0.8.0"
+
+[dependencies.pancurses]
+version = "0.8.0"
+features = ["wide"]
